--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
